# selectron

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  STATUS.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.playwright-cli/: page-2026-06-05T11-24-12-020Z.yml  page-2026-06-05T11-24-36-237Z.yml  page-2026-06-05T11-27-20-896Z.yml  page-2026-06-05T11-27-24-406Z.yml  page-2026-06-05T11-28-36-857Z.yml  page-2026-06-05T11-28-42-124Z.yml  page-2026-06-05T11-31-47-778Z.yml  page-2026-06-05T11-31-56-042Z.yml  page-2026-06-05T11-32-04-218Z.yml  page-2026-06-05T11-32-27-365Z.yml  page-2026-06-05T11-34-30-114Z.yml  page-2026-06-05T11-34-47-748Z.yml  page-2026-06-05T11-35-05-621Z.yml  page-2026-06-05T11-35-10-873Z.yml  page-2026-06-05T11-35-16-010Z.yml  page-2026-06-05T11-35-21-152Z.yml  page-2026-06-05T11-35-26-319Z.yml  page-2026-06-05T11-35-31-459Z.yml  page-2026-06-05T11-35-35-794Z.yml  page-2026-06-05T11-35-36-768Z.yml  page-2026-06-05T11-35-42-014Z.yml  page-2026-06-05T11-35-47-264Z.yml  page-2026-06-05T11-35-52-552Z.yml  page-2026-06-05T11-35-57-842Z.yml  page-2026-06-05T11-36-03-404Z.yml  page-2026-06-05T11-36-08-750Z.yml  page-2026-06-05T11-36-14-119Z.yml  page-2026-06-05T11-36-19-380Z.yml  page-2026-06-05T11-36-50-574Z.yml  page-2026-06-05T11-37-03-556Z.yml  page-2026-06-05T11-37-08-798Z.yml  page-2026-06-05T11-37-14-016Z.yml  page-2026-06-05T11-37-19-164Z.yml  page-2026-06-05T11-37-24-328Z.yml  page-2026-06-05T12-15-07-459Z.yml  page-2026-06-05T12-15-42-335Z.yml  page-2026-06-05T12-16-08-871Z.yml  page-2026-06-05T12-16-38-157Z.yml  page-2026-06-11T10-16-00-356Z.yml  page-2026-06-11T10-16-23-777Z.yml  (+1 more)
python/: pyproject.toml
python/api/: dependencies.py  job_store.py  main.py  models.py
python/api/routers/: conditions.py  fit.py  posterior.py  sensitivity.py  validate.py
python/src/selectron/: __init__.py  __main__.py  condition_mapping.py  conflict_fit.py  fitter.py  forward_mc.py  k15_reference.py  posterior.py  priors_io.py  sensitivity.py  validator.py  writer.py
python/tests/: conftest.py  test_api_cors.py  test_apply_fit.py  test_conflict_fit.py  test_fit_router.py  test_fitter.py  test_forward_mc.py  test_integration.py  test_k15_brackets_sync.py  test_posterior_determinism.py  test_posterior_module.py  test_posterior_router.py  test_priors_io.py  test_sensitivity.py  test_validate_router.py  test_validator.py  test_writer.py
(+533 files in other folders)
