[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selectron-offline"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pymc>=5.16",
    "arviz>=0.18",
    "nutpie>=0.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "SALib>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
